fixing the scrollbar issue in asset details

--- a/src/app/pages/solution/osv/asset-detail/asset-detail.component.scss
+++ b/src/app/pages/solution/osv/asset-detail/asset-detail.component.scss
@@ -43,3 +43,7 @@
 .background-light-blue {
 	background: $light-blue;
 }
+
+.responsive-table {
+	overflow: hidden;
+}
